--- a/src/index.css
+++ b/src/index.css
@@ -153,8 +153,29 @@ body {
   
 }
 
+.ulheader{
+    @apply md:flex md:items-center z-[-1] md:z-auto md:static absolute w-full left-0 md:w-auto md:py-0 py-4 md:pl-0 pl-7 opacity-0 md:opacity-100 transition-all ease-out duration-700 top-[-400px]
+}
+
+.linkheadersection{
+    @apply text-2xl  hover:text-cyan-500 hover:text-4xl duration-100 font-bold
+}
+/* SECTION 1*/
+.linksection1{
+    @apply text-indigo-500 inline-flex items-center p-10 m-10 scale-150 text-xl hover:text-cyan-300
+}
+
+.btnsection1{
+    @apply rounded-full mb-20 m-10 px-10 h-20 focus:outline-none text-center border-2 border-black text-3xl bg-indigo-500 hover:bg-cyan-300
+}
+
+/* SECTION 2*/
+.imgsection2{
+    @apply size-32 cursor-pointer hover:animate-pulse
+}
+
 /* Asumiendo que tu header tiene 80px de altura */
 .section-anchor {
-  padding-top: 300px;
-  margin-top: -120px;
+  padding-top: 250px;
+  margin-top: -70px;
 }
